--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,16 @@
 [submodule "javasrc/1"]
 	path = javasrc/1
 	url = https://github.com/ybroeker/spring-example.git
+	branch = 1
 [submodule "javasrc/2"]
 	path = javasrc/2
 	url = https://github.com/ybroeker/spring-example.git
+	branch = 2
 [submodule "javasrc/3"]
 	path = javasrc/3
 	url = https://github.com/ybroeker/spring-example.git
+	branch = 3
 [submodule "javasrc/4"]
 	path = javasrc/4
 	url = https://github.com/ybroeker/spring-example.git
+	branch = 4
