--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 	path = javasrc/6
 	url = https://github.com/ybroeker/spring-example.git
 	branch = 6
+[submodule "javasrc/7"]
+	path = javasrc/7
+	url = https://github.com/ybroeker/spring-example.git
