--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,6 @@
 	path = javasrc/7
 	url = https://github.com/ybroeker/spring-example.git
 	branch = 7
+[submodule "javasrc/8"]
+	path = javasrc/8
+	url = https://github.com/ybroeker/spring-example.git
